# blueprint

./: .crates.toml  .crates2.json  .gitignore  CLAUDE.md  Cargo.toml  PRD.md  README.md  blueprint.code-workspace  justfile  typst.toml  utpm.toml
.claude/: settings.json
.claude/agents/: typst-explorer.md
.claude/hooks/: check-typst-compile.sh  protect-ref-images.sh
.claude/rules/: examples.md  testing.md  typst-source.md
.claude/skills/add-component/: SKILL.md
.claude/skills/add-primitive/: SKILL.md
.claude/skills/debug-state/: SKILL.md
.claude/skills/docs/: SKILL.md
.claude/skills/example/: SKILL.md
.claude/skills/new-test/: SKILL.md
.claude/skills/review/: SKILL.md
docs/: manual.typ
examples/: simple.typ
src/: canvas.typ  component.typ  connector.typ  deps.typ  edge.typ  exports.typ  layout.typ  lib.typ  primitives.typ  style.typ  utils.typ
tests/: README.md
tests/color-variations/: test.typ
tests/component-borders-circle/: test.typ
tests/component-borders-ellipse/: test.typ
tests/component-borders-rect/: test.typ
tests/component-connectors/: test.typ
tests/component-inheritance/: test.typ
tests/computer-architecture/: test.typ
tests/datacenter-architecture/: test.typ
tests/edge-routing/: test.typ
tests/nested-components/: test.typ
tests/primitives-circle/: test.typ
tests/primitives-ellipse/: test.typ
tests/primitives-rect/: test.typ
tests/relative-positioning/: test.typ
tests/render-modes/: test.typ
tests/sql-generated/: test.typ
tests/styles-and-themes/: test.typ
tools/: infra.db  sql_to_blueprint.py
(+4 files in other folders)
